--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -1,14 +1,14 @@
 import Link from "next/link";
 
-# About Workout.cool
+# About Workouts
 
-## Why Workout.cool?
+## Why Workouts?
 
-Workout.cool was born out of the desire to offer a reliable, modern, and actively maintained workout platform, after the original project <WorkoutLol variant="muted" /> was abandoned.
+Workouts was born out of the desire to offer a reliable, modern, and actively maintained workout platform, after the original project <WorkoutLol variant="muted" /> was abandoned.
 
 ## The Story
 
-Workout.cool is the result of a community-driven adventure.
+Workouts is the result of a community-driven adventure.
 
 I was the **first open source contributor** to the <WorkoutLol variant="muted" /> project.
 
@@ -30,7 +30,7 @@ This project is not driven by profit, but by **passion** and a desire to serve t
 
 ## Open Source & Community
 
-Workout.cool is open source, ensuring transparency, modularity, and scalability.  
+Workouts is open source, ensuring transparency, modularity, and scalability.  
 Everyone is welcome to contribute—code, documentation, or ideas!
 
 - [See the project on GitHub](https://github.com/Snouzy/workout-cool)
@@ -45,4 +45,4 @@ We're proud to partner with [Fit'Distance](https://fitdistance.io), thanks to wh
 Want to contribute, suggest a feature, or simply support the project?  
 Contact us or open an issue on GitHub!
 
-**[hello@workout.cool](mailto:hello@workout.cool)**
+**[hello@workouts.app](mailto:hello@workouts.app)**
