--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -1,14 +1,14 @@
 import Link from "next/link";
 
-# Acerca de Workout.cool
+# Acerca de Workouts
 
-## ¿Por qué Workout.cool?
+## ¿Por qué Workouts?
 
-Workout.cool nació del deseo de ofrecer una plataforma de entrenamiento confiable, moderna y activamente mantenida, después de que el proyecto original <WorkoutLol variant="muted" /> fuera abandonado.
+Workouts nació del deseo de ofrecer una plataforma de entrenamiento confiable, moderna y activamente mantenida, después de que el proyecto original <WorkoutLol variant="muted" /> fuera abandonado.
 
 ## La historia
 
-Workout.cool es el resultado de una aventura impulsada por la comunidad.
+Workouts es el resultado de una aventura impulsada por la comunidad.
 
 Fui el **primer colaborador de open source** del proyecto <WorkoutLol variant="muted" />.
 
@@ -30,7 +30,7 @@ Este proyecto no está impulsado por el beneficio, sino por la **pasión** y el 
 
 ## Open Source y comunidad
 
-Workout.cool es de open source, garantizando transparencia, modularidad y escalabilidad.
+Workouts es de open source, garantizando transparencia, modularidad y escalabilidad.
 ¡Todos son bienvenidos a contribuir—código, documentación o ideas!
 
 - [Ver el proyecto en GitHub](https://github.com/Snouzy/workout-cool)
@@ -45,4 +45,4 @@ Estamos orgullosos de asociarnos con [Fit'Distance](https://fitdistance.io), gra
 ¿Quieres contribuir, sugerir una función o simplemente apoyar el proyecto?
 ¡Contáctanos o abre un issue en GitHub!
 
-**[hello@workout.cool](mailto:hello@workout.cool)**
+**[hello@workouts.app](mailto:hello@workouts.app)**
