--- a/content/about/zh-CN.mdx
+++ b/content/about/zh-CN.mdx
@@ -1,14 +1,14 @@
 import Link from "next/link";
 
-# 关于 Workout.cool
+# 关于 Workouts
 
-## 为什么选择 Workout.cool？
+## 为什么选择 Workouts？
 
-Workout.cool 诞生于在原项目 <WorkoutLol variant="muted" /> 被放弃后，为用户提供一个可靠、现代化且持续维护的健身平台的愿望。
+Workouts 诞生于在原项目 <WorkoutLol variant="muted" /> 被放弃后，为用户提供一个可靠、现代化且持续维护的健身平台的愿望。
 
 ## 我们的故事
 
-Workout.cool 是社区驱动的成果。
+Workouts 是社区驱动的成果。
 
 我是 <WorkoutLol variant="muted" /> 项目的**第一位开源贡献者**。
 
@@ -30,7 +30,7 @@ Workout.cool 是社区驱动的成果。
 
 ## 开源与社区
 
-Workout.cool 是开源的，确保透明度、模块化和可扩展性。  
+Workouts 是开源的，确保透明度、模块化和可扩展性。  
 欢迎所有人贡献——代码、文档或想法！
 
 - [在 GitHub 上查看项目](https://github.com/Snouzy/workout-cool)
@@ -45,4 +45,4 @@ Workout.cool 是开源的，确保透明度、模块化和可扩展性。
 想要贡献、建议功能或仅仅支持项目？  
 联系我们或在 GitHub 上创建 issue！
 
-**[hello@workout.cool](mailto:hello@workout.cool)**
+**[hello@workouts.app](mailto:hello@workouts.app)**
