--- a/content/privacy-policy/es.mdx
+++ b/content/privacy-policy/es.mdx
@@ -1,16 +1,16 @@
-# Política de Privacidad de WorkoutCool
+# Política de Privacidad de Workouts
 
 ## 1. Introducción
 
-En **WorkoutCool**, tomamos muy en serio la privacidad de nuestros usuarios.  
+En **Workouts**, tomamos muy en serio la privacidad de nuestros usuarios.  
 Esta Política de Privacidad explica cómo recopilamos, usamos y protegemos sus datos personales.  
 Al utilizar nuestros servicios, usted acepta las prácticas descritas a continuación.
 
 ## 2. Información que recopilamos
 
-**Información personal**: Cuando se registra, recopilamos su nombre, dirección de correo electrónico y otros detalles relacionados con su actividad en WorkoutCool.
+**Información personal**: Cuando se registra, recopilamos su nombre, dirección de correo electrónico y otros detalles relacionados con su actividad en Workouts.
 
-**Datos de uso**: Rastreamos las interacciones con las páginas de WorkoutCool, incluyendo clics, vistas y rendimiento de enlaces.
+**Datos de uso**: Rastreamos las interacciones con las páginas de Workouts, incluyendo clics, vistas y rendimiento de enlaces.
 
 **Cookies**: Utilizamos cookies para mejorar su experiencia de usuario y monitorear el uso.
 
@@ -44,7 +44,7 @@ Usted tiene los siguientes derechos:
 
 ## 8. Cookies
 
-WorkoutCool utiliza cookies para:
+Workouts utiliza cookies para:
 
 - mejorar la navegación,
 - rastrear el rendimiento,
@@ -87,4 +87,4 @@ El uso continuado de nuestros servicios implica la aceptación de cualquier camb
 ## 11. Contacto
 
 Si tiene alguna pregunta o inquietud sobre esta política, no dude en contactarnos en:  
-**[hello@WorkoutCool.io](mailto:hello@WorkoutCool.io)**
+**[hello@Workouts.io](mailto:hello@Workouts.io)**
