--- a/content/privacy-policy/ru.mdx
+++ b/content/privacy-policy/ru.mdx
@@ -1,16 +1,16 @@
-# Политика конфиденциальности WorkoutCool
+# Политика конфиденциальности Workouts
 
 ## 1. Введение
 
-В **WorkoutCool** мы очень серьезно относимся к конфиденциальности наших пользователей.  
+В **Workouts** мы очень серьезно относимся к конфиденциальности наших пользователей.  
 Эта Политика конфиденциальности объясняет, как мы собираем, используем и защищаем ваши персональные данные.  
 Используя наши услуги, вы соглашаетесь с практиками, описанными ниже.
 
 ## 2. Информация, которую мы собираем
 
-**Персональная информация**: При регистрации мы собираем ваше имя, адрес электронной почты и другие данные, связанные с вашей активностью на WorkoutCool.
+**Персональная информация**: При регистрации мы собираем ваше имя, адрес электронной почты и другие данные, связанные с вашей активностью на Workouts.
 
-**Данные об использовании**: Мы отслеживаем взаимодействия со страницами WorkoutCool, включая клики, просмотры и производительность ссылок.
+**Данные об использовании**: Мы отслеживаем взаимодействия со страницами Workouts, включая клики, просмотры и производительность ссылок.
 
 **Файлы cookie**: Мы используем файлы cookie для улучшения пользовательского опыта и мониторинга использования.
 
@@ -44,7 +44,7 @@
 
 ## 8. Файлы cookie
 
-WorkoutCool использует файлы cookie для:
+Workouts использует файлы cookie для:
 
 - улучшения навигации,
 - отслеживания производительности,
@@ -87,4 +87,4 @@ Ezoic и его партнеры могут использовать эти да
 ## 11. Контакты
 
 Если у вас есть вопросы или опасения относительно этой политики, свяжитесь с нами по адресу:  
-**[hello@WorkoutCool.io](mailto:hello@WorkoutCool.io)**
+**[hello@Workouts.io](mailto:hello@Workouts.io)**
